fixed clippy

--- a/app/assets/stylesheets/desktop.scss
+++ b/app/assets/stylesheets/desktop.scss
@@ -127,7 +127,7 @@ a:hover{
     .clippy{
         position:fixed;
         right:0px;
-        bottom:10px;
+        bottom:40px;
     }    
 }
 .hidden{
